Fix up styling issues when played cards wrap over a row

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,6 +47,7 @@
 
 .playerRow {
   display: flex;
+  flex-direction: row;
   padding: 1em;
 }
 
@@ -64,17 +65,20 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-  height: 150px;
+  flex-wrap: wrap;
+  min-height: 150px;
 }
 
 .cardLink {
   text-decoration: none;
   user-select: none;
+  margin-bottom: 10px;
+  margin-right: 0px;
 }
 
 .card {
   box-sizing: border-box;
-  margin-right: 0.5em;
+  margin-right: 10px;
   display: flex;
   width: 100px;
   height: 150px;
